--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://goitacademy.github.io/AleksandroKravchuk/nnjs-progect",
+  "homepage": "https://AleksandroKravchuk.github.io/js-progect",
   "scripts": {
-    "start": "parcel src/*.html -open",
+    "start": "parcel src/*.html ",
     "build": "parcel build src/*.html --public-url /js-progect/"
   },
   "repository": {
