--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://aleksandrokravchuk.github.io/js-progect",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /js-progect//"
+    "build": "parcel build src/*.html --public-url /js-progect/"
   },
   "repository": {
     "type": "git",
